--- a/.ladle/head.html
+++ b/.ladle/head.html
@@ -1,10 +1,37 @@
 <style>
-:root {
-  --color: #333;
-}
-html[data-theme="dark"] {
-  --color: #eee;
-}
-body { color: var(--color); font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
+    :root {
+        --border-color: color(display-p3 0.898039 0.898039 0.937255);
+        --color: color(display-p3 0.4, 0.4, 0.4);
+        --zebra-color: color(display-p3 0.972549 0.972549 0.972549 / 1);
+    }
+    html[data-theme="dark"] {
+        --border-color: color(display-p3 0.133333 0.133333 0.133333);
+        --color: #ddd;
+        --zebra-color: color(display-p3 0.027451 0.027451 0.027451 / 1);
+    }
+    body {
+        color: var(--color);
+        font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI",
+            Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+            sans-serif;
+    }
+    table {
+        border-collapse: collapse;
+    }
+    th {
+        border: 1px solid var(--border-color);
+        padding: 6px 12px;
+        text-align: start;
+    }
+    tr:nth-child(2n) {
+        background-color: var(--zebra-color);
+    }
+    td {
+        border: 1px solid var(--border-color);
+        line-height: 1.6;
+        padding: 6px 12px;
+    }
+    p {
+        line-height: 1.6;
+    }
 </style>
-
