--- a/.ladle/head.html
+++ b/.ladle/head.html
@@ -1,11 +1,15 @@
 <style>
     :root {
-        --border-color: color(display-p3 0.898039 0.898039 0.937255);
+        --ladle-border-color: color(display-p3 0.898039 0.898039 0.937255);
+        --code-bg-color: #f8f8f8;
+        --code-color: rgba(51, 51, 51, 0.9);
         --color: color(display-p3 0.4, 0.4, 0.4);
         --zebra-color: color(display-p3 0.972549 0.972549 0.972549 / 1);
     }
     html[data-theme="dark"] {
-        --border-color: color(display-p3 0.133333 0.133333 0.133333);
+        --ladle-border-color: color(display-p3 0.133333 0.133333 0.133333);
+        --code-bg-color: #363636;
+        --code-color: rgba(220, 220, 220, 0.9);
         --color: #ddd;
         --zebra-color: color(display-p3 0.027451 0.027451 0.027451 / 1);
     }
@@ -19,7 +23,7 @@
         border-collapse: collapse;
     }
     th {
-        border: 1px solid var(--border-color);
+        border: 1px solid var(--ladle-border-color);
         padding: 6px 12px;
         text-align: start;
     }
@@ -27,11 +31,24 @@
         background-color: var(--zebra-color);
     }
     td {
-        border: 1px solid var(--border-color);
+        border: 1px solid var(--ladle-border-color);
         line-height: 1.6;
         padding: 6px 12px;
     }
-    p {
+    p,
+    li {
+        color: var(--color);
         line-height: 1.6;
+    }
+    code {
+        background-color: var(--code-bg-color);
+        border: 1px solid var(--ladle-border-color);
+        border-radius: 3px;
+        color: var(--code-color);
+        font-size: 13px;
+        line-height: 1;
+        margin: 0 2px;
+        padding: 3px 5px;
+        white-space: nowrap;
     }
 </style>
