Add className prop functionality; some polish

--- a/.ladle/head.html
+++ b/.ladle/head.html
@@ -15,9 +15,9 @@
     }
     body {
         color: var(--color);
-        font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI",
-            Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-            sans-serif;
+        font-family:
+            -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
+            Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     }
     table {
         border-collapse: collapse;
@@ -50,6 +50,16 @@
         margin: 0 2px;
         padding: 3px 5px;
         white-space: nowrap;
+    }
+    pre {
+        background-color: var(--code-bg-color);
+        border: 1px solid var(--ladle-border-color);
+        border-radius: 3px;
+        color: var(--code-color);
+        font-size: 13px;
+        line-height: 1;
+        margin: 0 2px;
+        padding: 8px 5px;
     }
     .ladle-ctx-menu li:hover {
         background-color: lightsteelblue;
